gateway/default-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    -  argo-cd.tradersclub.com.br
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: ssl-https-credential
      httpsRedirect: true
      mode: SIMPLE

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argo-workflows-gateway 
  namespace: argo
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - argo-workflows.tradersclub.com.br
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: ssl-https-credential
      mode: SIMPLE #PASSTHROUGH #

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: webhook-gateway
  namespace: argo-events
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - webhook.tradersclub.com.br
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: ssl-https-credential
      mode: SIMPLE
