gateway/authorization.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: argo-server
  namespace: argo
spec:
  host: argo-server.argo.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
