gateway/default-virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
    - "*"
  gateways:
    - argocd-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server
            port:
              number: 443     
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: argo-workflows-vs
  namespace: argo
spec:
  hosts:
    - "*"
  gateways:
    - argo-workflows-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argo-server.argo.svc.cluster.local
            port:
              number: 2746
      timeout: 300s                    
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: webhook-vs
  namespace: argo-events
spec:
  hosts:
    - "*"
  gateways:
    - webhook-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: github-eventsource-svc
            port:
              number: 12000
